# rust-minimal

./: Cargo.toml  README.md
crates/async-openai/: Cargo.toml
crates/openai/: Cargo.toml
crates/openai/src/: main.rs
crates/openapi/: Cargo.toml
crates/openapi/src/: main.rs
crates/quadrant/: Cargo.toml
crates/quadrant/src/: main.rs
